fixing misaligned code content + colors

--- a/styles/global.css
+++ b/styles/global.css
@@ -74,7 +74,13 @@ code[class^="language-"] {
   font-family: monospace;
 }
 
+.hljs-string {
+  color: greenyellow;
+}
+
 pre {
   background-color: #1F1F1F;
   padding: 1em;
+  text-align: start;
+  color: white;
 }
